--- a/views/layout.pug
+++ b/views/layout.pug
@@ -52,7 +52,7 @@ html
               i.social-icon.fab.fa-facebook-f.footlogo
               i.social-icon.fab.fa-instagram.footlogo
               i.social-icon.fas.fa-envelope.footlogo
-              p.footcopy © Copyright 2019 Knowledgebase
+              p.footcopy © Copyright Knowledgebase
 
     script(src='/bower_components/jquery/dist/jquery.js')
     script(src='/bower_components/bootstrap/dist/js/bootstrap.js')
